# XMServer

./: CMakeLists.txt  README.md  config.ini  main.cpp  main.h
core/: md5.h  server.cpp  server.h  xmlevel.cpp  xmlevel.h
math/: vector.cpp  vector.h
